@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2009/05/16 21:00:35 minskim Exp $
-
-SHA1 (tex-bin-xmltex-0.8/bin-xmltex.tar.lzma) = 812645efc2e8560a8ea802fc93ecc32ebe6d1613
-RMD160 (tex-bin-xmltex-0.8/bin-xmltex.tar.lzma) = f3ec671ad275c4c9732f07c4378393dbaf5380fe
-Size (tex-bin-xmltex-0.8/bin-xmltex.tar.lzma) = 758 bytes
